--- a/src/components/tradeblotter/tradeblotter.css
+++ b/src/components/tradeblotter/tradeblotter.css
@@ -1,4 +1,8 @@
+html {
+    overflow: hidden;
+}
 body {
+    overflow: auto;
 	margin:0px;
 }
 
